...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widgetParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayoutParent"
        android:contentDescription="Floating Widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <!-- this is the collapsed layout -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Collapsed Layout"
            android:id="@+id/layoutCollapsed"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:contentDescription="Customized Widget"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:id="@+id/collapsed_iv" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="Button Closed"
                android:layout_marginLeft="50dp"
                android:id="@+id/buttonClose"
                android:src="@drawable/apple"/>
        </RelativeLayout>

        <!-- This is the expanded layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:contentDescription="Expanded Layout"
            android:id="@+id/layoutExpanded"
            android:background="#a0cdd7"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:visibility="gone">

...
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#000099"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/quickLaunch"
                    android:contentDescription="Launch Apps"
                    android:layout_width="175dp"
                    android:layout_height="90dp"
                    android:layout_below="@+id/select_action"
                    android:layout_centerHorizontal="true"
                    android:text="@string/launch_apps"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/returnToApp"
                    android:contentDescription="Return to App"
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:textSize="16sp"
                    android:layout_below="@+id/quickLaunch"
                    android:layout_centerHorizontal="true" />
...
