...
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:showDividers="middle">

                            <ImageView
                                android:contentDescription="First Button"
                                android:id="@+id/firstButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Second Button"
                                android:id="@+id/secondButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Third Button"
                                android:id="@+id/thirdButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
...
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:showDividers="middle">

                            <ImageView
                                android:contentDescription="Fourth Button"
                                android:id="@+id/fourthButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Fifth Button"
                                android:id="@+id/fifthButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />

                            <ImageView
                                android:contentDescription="Sixth Button"
                                android:id="@+id/sixthButton"
                                android:layout_width="@dimen/row_height"
                                android:layout_height="@dimen/row_height" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ConCat"
                            android:layout_width="@dimen/main_button_width"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_baseline_airplanemode_active_24"
                            android:text="Launch" />

                        <View
...
