...
            android:layout_height="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:contentDescription="Recycler View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/applicationRecyclerView"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
